--- a/GBSipClient/GBSipClient.ui
+++ b/GBSipClient/GBSipClient.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>954</width>
     <height>900</height>
    </rect>
   </property>
@@ -30,10 +30,10 @@ selection-background-color: rgb(255, 56, 7);</string>
   <widget class="QTreeWidget" name="treeWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>11</y>
-     <width>261</width>
-     <height>531</height>
+     <x>690</x>
+     <y>560</y>
+     <width>121</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -45,36 +45,110 @@ selection-background-color: rgb(255, 56, 7);</string>
     </property>
    </column>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QTreeView" name="treeView">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>570</y>
-     <width>158</width>
-     <height>25</height>
+     <x>10</x>
+     <y>10</y>
+     <width>241</width>
+     <height>531</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>目录查询</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="text">
-       <string>播放</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
+  </widget>
+  <widget class="QTableView" name="tableView">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>690</y>
+     <width>941</width>
+     <height>192</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>570</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>目录查询</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>582</x>
+     <y>571</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>播放</string>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
   <include location="GBSipClient.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>treeView</sender>
+   <signal>doubleClicked(QModelIndex)</signal>
+   <receiver>GBSipClientClass</receiver>
+   <slot>treeDoubleCllicked(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>188</x>
+     <y>687</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>953</x>
+     <y>755</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>treeView</sender>
+   <signal>clicked(QModelIndex)</signal>
+   <receiver>GBSipClientClass</receiver>
+   <slot>treeCllicked(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>229</x>
+     <y>612</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>953</x>
+     <y>687</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>GBSipClientClass</receiver>
+   <slot>queryCatalog()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>510</x>
+     <y>580</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>979</x>
+     <y>676</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>treeDoubleCllicked(QModelIndex)</slot>
+  <slot>treeCllicked(QModelIndex)</slot>
+  <slot>queryCatalog()</slot>
+ </slots>
 </ui>
